--- a/zimmer_window.ui
+++ b/zimmer_window.ui
@@ -459,7 +459,8 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Close</string>
+        <string>Close
+(grip)</string>
        </property>
       </widget>
      </item>
@@ -472,7 +473,8 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Open</string>
+        <string>Open
+(release)</string>
        </property>
       </widget>
      </item>
